# Krishi-Sakha---Anytime-Anywhere

./: .gitignore
krishi_sakha_py/: README.md  main.py  pyproject.toml
krishi_sakha_py/brain/: brain_init.py  context_prioritizer.py  context_retriever.py  language_brain.py  market_analyzer.py  model_run.py
krishi_sakha_py/chroma_db/0bc265cb-3f53-4b5d-8ff7-dcbfca827ffb/: index_metadata.pickle
krishi_sakha_py/configs/: external_keys.py  model_config.py  supabase_key.py
krishi_sakha_py/data/functions/: add_to_vector_db.py  parse_pdf.py
krishi_sakha_py/modules/auth/: create_user.py
krishi_sakha_py/modules/my_scheme/: data_processor.py  full_api_extractor.py  scheme_data_20251028_221846.json  scheme_data_20251028_222111.json  scheme_data_20251028_222134.json  scheme_data_20251028_222141.json  scheme_data_20251028_222212.json  scheme_data_20251028_222217.json  scheme_data_20251028_222222.json  scheme_data_20251028_222228.json  scheme_data_20251028_222234.json  scheme_extractor.py  simple_api_extractor.py
krishi_sakha_py/modules/scrapper/: scrapper.py
krishi_sakha_py/modules/search/: searxng_json.py
krishi_sakha_py/routes/: chat.py  language.py  mandi.py  post.py  search.py  test.py  user.py  voice.py
krishi_sakha_py/scripts/: add_pdfs_to_vectordb.py  create_user.py  enam_mandi.py  enam_price.py  imd_handler.py  search_vectordb.py  setup_get_posts_rpc.py
krishi_sakha_py/tests/: test_create_post.py  test_direct_sql.py  test_get_posts_rpc.py  test_post_endpoints.py  test_rpc_working.py  test_supabase_upload.py  test_top_market_crops.py
notebook/: README.md  (+3 more)
(+245 files in other folders)
